package CashierView;

public class Receipt {
}
