@startuml

title __CASHIERVIEW's Class Diagram__\n

  namespace CashierView {
    class CashierView.CashierView {
        {static} + main()
        + start()
    }
  }
  

  namespace CashierView {
    class CashierView.CashierViewController {
    }
  }
  

  namespace CashierView {
    class CashierView.Receipt {
    }
  }
  
namespace CashierView {
    namespace OrderView {
      class CashierView.OrderView.OrderView {
          {static} + main()
          + start()
      }
    }
  }


  namespace CashierView {
    namespace OrderView {
      class CashierView.OrderView.OrderViewController {
      }
    }
  }
namespace CashierView {
    namespace CartView {
      class CashierView.CartView.CartView {
          {static} + main()
          + start()
      }
    }
  }


  namespace CashierView {
    namespace CartView {
      class CashierView.CartView.CartViewController {
      }
    }
  }


  CashierView.CartView.CartView -up-|> javafx.application.Application
  CashierView.OrderView.OrderView -up-|> javafx.application.Application
  CashierView.CashierView -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
